[gd_scene load_steps=19 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Player2.gd" type="Script" id=2]
[ext_resource path="res://Ball.gd" type="Script" id=3]
[ext_resource path="res://World.gd" type="Script" id=4]
[ext_resource path="res://bolas/porti.png" type="Texture" id=5]
[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://campos/CampoFutbol.png" type="Texture" id=7]
[ext_resource path="res://img/Fondo-gris-transparente-2.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 526, 15.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 529.5, 18.5 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.5, 66 )

[sub_resource type="PhysicsMaterial" id=6]
bounce = 1.0

[sub_resource type="CircleShape2D" id=4]
radius = 27.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16.5, 309.5 )

[sub_resource type="DynamicFont" id=9]
size = 35
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="World" type="Node2D"]
script = ExtResource( 4 )

[node name="estadio" type="Sprite" parent="."]
position = Vector2( 510, 300 )
scale = Vector2( 1.00349, 0.998396 )
texture = ExtResource( 7 )

[node name="MundoDecoracion" type="Node" parent="."]

[node name="muroArriba" type="StaticBody2D" parent="MundoDecoracion"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MundoDecoracion/muroArriba"]
position = Vector2( 516, 5.5 )
shape = SubResource( 1 )

[node name="muroAbajo" type="StaticBody2D" parent="MundoDecoracion"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MundoDecoracion/muroAbajo"]
position = Vector2( 509, 608 )
shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="MundoDecoracion"]
visible = false
margin_top = -8.0
margin_right = 1051.0
margin_bottom = 26.0

[node name="ColorRect3" type="ColorRect" parent="MundoDecoracion"]
visible = false
margin_left = 513.0
margin_top = 62.0
margin_right = 521.0
margin_bottom = 119.0

[node name="ColorRect4" type="ColorRect" parent="MundoDecoracion"]
visible = false
margin_left = 513.0
margin_top = 147.0
margin_right = 521.0
margin_bottom = 204.0

[node name="ColorRect5" type="ColorRect" parent="MundoDecoracion"]
visible = false
margin_left = 513.0
margin_top = 233.0
margin_right = 521.0
margin_bottom = 290.0

[node name="ColorRect6" type="ColorRect" parent="MundoDecoracion"]
visible = false
margin_left = 513.0
margin_top = 325.0
margin_right = 521.0
margin_bottom = 382.0

[node name="ColorRect7" type="ColorRect" parent="MundoDecoracion"]
visible = false
margin_left = 513.0
margin_top = 414.0
margin_right = 521.0
margin_bottom = 471.0

[node name="ColorRect8" type="ColorRect" parent="MundoDecoracion"]
visible = false
margin_left = 513.0
margin_top = 499.0
margin_right = 521.0
margin_bottom = 556.0

[node name="ColorRect9" type="ColorRect" parent="MundoDecoracion"]
visible = false
margin_left = 513.0
margin_top = 501.0
margin_right = 521.0
margin_bottom = 558.0

[node name="ColorRect2" type="ColorRect" parent="MundoDecoracion"]
visible = false
margin_left = -4.0
margin_top = 584.0
margin_right = 1060.0
margin_bottom = 645.0

[node name="ScoreTextoIzquierda" type="Label" parent="."]
margin_left = 418.0
margin_top = 60.0
margin_right = 486.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 7 )
text = "0
"

[node name="ScoreTextoDerecha" type="Label" parent="."]
margin_left = 561.0
margin_top = 60.0
margin_right = 625.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 8 )
text = "0
"
align = 1

[node name="Player" type="KinematicBody2D" parent="." groups=["Player"]]
position = Vector2( 37, 255 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Player"]
margin_right = 21.0
margin_bottom = 132.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 10.5, 66 )
shape = SubResource( 3 )

[node name="Player2" type="KinematicBody2D" parent="." groups=["Player"]]
position = Vector2( 949, 248 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Player2"]
margin_right = 21.0
margin_bottom = 132.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
position = Vector2( 10.5, 66 )
shape = SubResource( 3 )

[node name="Ball" type="RigidBody2D" parent="." groups=["Ball"]]
position = Vector2( 516, 305 )
physics_material_override = SubResource( 6 )
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
script = ExtResource( 3 )

[node name="ColisionBola" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 4 )

[node name="Bola" type="Sprite" parent="Ball/ColisionBola"]
rotation = 0.00990664
scale = Vector2( 0.186122, 0.192201 )
texture = ExtResource( 5 )

[node name="Area2DDerecha" type="Area2D" parent="."]
position = Vector2( 1023, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DDerecha"]
position = Vector2( 16.5, 299.5 )
shape = SubResource( 5 )

[node name="Area2DIzquierda" type="Area2D" parent="."]
position = Vector2( -31, 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DIzquierda"]
position = Vector2( 16.5, 299.5 )
shape = SubResource( 5 )

[node name="MenuPausa" type="Control" parent="." groups=["menu"]]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Sprite" type="Sprite" parent="MenuPausa"]
position = Vector2( 511, 296 )
scale = Vector2( 1.71167, 1.01833 )
texture = ExtResource( 8 )

[node name="Reanudar" type="Button" parent="MenuPausa"]
pause_mode = 2
margin_left = 381.0
margin_top = 140.0
margin_right = 646.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 9 )
text = "REANUDAR"

[node name="Reiniciar" type="Button" parent="MenuPausa"]
pause_mode = 2
margin_left = 380.0
margin_top = 214.0
margin_right = 645.0
margin_bottom = 269.0
custom_fonts/font = SubResource( 9 )
text = "REINICIAR"

[node name="Salir" type="Button" parent="MenuPausa"]
pause_mode = 2
margin_left = 377.0
margin_top = 290.0
margin_right = 642.0
margin_bottom = 345.0
custom_fonts/font = SubResource( 9 )
text = "SALIR"

[node name="Label" type="Label" parent="MenuPausa"]
margin_left = 328.0
margin_top = 61.0
margin_right = 710.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 10 )
text = "MENU PAUSA
"

[connection signal="body_entered" from="Ball" to="Ball" method="_on_Ball_body_entered"]
[connection signal="body_entered" from="Area2DDerecha" to="." method="_on_Area2DDerecha_body_entered"]
[connection signal="body_entered" from="Area2DIzquierda" to="." method="_on_Area2DIzquierda_body_entered"]
[connection signal="pressed" from="MenuPausa/Reanudar" to="." method="_on_Reanudar_pressed"]
[connection signal="pressed" from="MenuPausa/Reiniciar" to="." method="_on_Reiniciar_pressed"]
[connection signal="pressed" from="MenuPausa/Salir" to="." method="_on_Salir_pressed"]
